--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <a href="https://opkale.me/vipgacor" target="_blank" rel="noreferrer noopener" role="button" class="btn-menu">DAFTAR</a>
       <a href="https://opkale.me/vipgacor" target="_blank" rel="noreferrer noopener" role="button" class="btn-menu">LINK ALTERNATIF</a>
       <p>
-      <p class="copyright">@ Copyright 2025 By <a href="https://vi.hoangtamgarments.com/" rel="noopener noreferrer" style="color: #ffee00;">OLXTOTO</a></p>
+      <p class="copyright">@ Copyright 2025 By <a href="https://vi.hoangtamgarments.com/" rel="noopener noreferrer" style="color: #238636;">OLXTOTO</a></p>
       <div class="blue-wind">
       <div class="wind-line"></div>
       <br><br>
@@ -371,4 +371,5 @@
     </div>
   </body>
 </html>
+
 
