--- a/admin.html
+++ b/admin.html
@@ -1,115 +1,68 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Admin Update Rekening</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #f5f7fa;
-        margin: 0;
-        padding: 20px;
-    }
-    h2 {
-        color: #004b87;
-        text-align: center;
-    }
-    form {
-        max-width: 400px;
-        margin: auto;
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
-    }
-    label {
-        display: block;
-        margin-top: 12px;
-        font-weight: bold;
-    }
-    input {
-        width: 100%;
-        padding: 10px;
-        margin-top: 5px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-    }
-    button {
-        margin-top: 20px;
-        width: 100%;
-        padding: 12px;
-        background: #004b87;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-    }
-    button:hover {
-        background: #00335d;
-    }
-    .status {
-        text-align: center;
-        margin-top: 15px;
-        font-weight: bold;
-    }
-</style>
+  <meta charset="UTF-8">
+  <title>Admin Update Rekening</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; background: #eef2f3; }
+    .form-container { background: white; padding: 20px; border-radius: 8px; max-width: 400px; margin: auto; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    label { display: block; margin-top: 10px; }
+    input { width: 100%; padding: 8px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc; }
+    button { margin-top: 15px; padding: 10px; width: 100%; background: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #218838; }
+    .msg { margin-top: 15px; }
+  </style>
 </head>
 <body>
+  <div class="form-container">
+    <h2>Update Data Rekening</h2>
+    <label>Bank:</label>
+    <input type="text" id="bank">
+    <label>Nama:</label>
+    <input type="text" id="nama">
+    <label>No. Rekening:</label>
+    <input type="text" id="norek">
+    <label>Jumlah:</label>
+    <input type="text" id="amount">
+    <button onclick="updateData()">Simpan</button>
+    <div class="msg" id="msg"></div>
+  </div>
 
-<h2>Admin Update Data Rekening</h2>
+  <script>
+    const endpoint = "https://script.google.com/macros/s/AKfycbx9Ozvx0t5GhTxjuIR7_KD4SZkVFdFA9A6xrTSB57MUgeQEpD9NpYn7InuDeYGL8Mfg/exec";
 
-<form id="updateForm">
-    <label>Nama Bank</label>
-    <input type="text" id="bank" placeholder="Contoh: BRI" required>
+    // Ambil data awal
+    fetch(endpoint)
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById("bank").value = data.bank;
+        document.getElementById("nama").value = data.nama;
+        document.getElementById("norek").value = data.norek;
+        document.getElementById("amount").value = data.amount;
+      })
+      .catch(err => console.error(err));
 
-    <label>Nama Pemilik Rekening</label>
-    <input type="text" id="nama" placeholder="Contoh: Ferdiansyah" required>
+    function updateData() {
+      const payload = {
+        bank: document.getElementById("bank").value,
+        nama: document.getElementById("nama").value,
+        norek: document.getElementById("norek").value,
+        amount: document.getElementById("amount").value
+      };
 
-    <label>Nomor Rekening</label>
-    <input type="text" id="norek" placeholder="Contoh: 1234567890" required>
-
-    <label>Jumlah Transfer Default</label>
-    <input type="number" id="amount" placeholder="Contoh: 50000" min="0">
-
-    <button type="submit">Update Data</button>
-</form>
-
-<div class="status" id="statusMsg"></div>
-
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwh1FUnZBQ5uKVGWNRxFqe585EQ5svJKOll1O3EY128dOdNNF2oczXDVG-j8894kRZc/exec";
-
-document.getElementById("updateForm").addEventListener("submit", function(e){
-    e.preventDefault();
-
-    let bank = document.getElementById("bank").value.trim();
-    let nama = document.getElementById("nama").value.trim();
-    let norek = document.getElementById("norek").value.trim();
-    let amount = document.getElementById("amount").value.trim();
-
-    fetch(scriptURL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-            bank: bank,
-            nama: nama,
-            norek: norek,
-            amount: amount
-        })
-    })
-    .then(res => res.json())
-    .then(data => {
-        document.getElementById("statusMsg").style.color = data.status === "success" ? "green" : "red";
-        document.getElementById("statusMsg").innerText = data.message;
-    })
-    .catch(err => {
-        document.getElementById("statusMsg").style.color = "red";
-        document.getElementById("statusMsg").innerText = "❌ Gagal update. Periksa koneksi atau endpoint.";
-    });
-});
-</script>
-
+      fetch(endpoint, {
+        method: "POST",
+        body: JSON.stringify(payload)
+      })
+      .then(res => res.json())
+      .then(response => {
+        document.getElementById("msg").textContent = response.message;
+      })
+      .catch(err => {
+        document.getElementById("msg").textContent = "Terjadi kesalahan saat menyimpan.";
+        console.error(err);
+      });
+    }
+  </script>
 </body>
 </html>
